# trade1

value_trend_backtester/: README.md  pyproject.toml
value_trend_backtester/docs/: index.html
value_trend_backtester/examples/: sample_prices.csv
value_trend_backtester/outputs/: demo_input.csv
value_trend_backtester/outputs/demo_local/: DEMO_daily.csv
value_trend_backtester/outputs/demo_local_cn/: 贵州茅台_summary.json  贵州茅台_trades.csv
value_trend_backtester/src/value_trend_backtester/: __init__.py  cli.py  data.py  metrics.py  plot.py  strategy.py
value_trend_backtester/src/value_trend_backtester.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
value_trend_backtester/tests/: test_strategy.py
