[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "value-trend-backtester"
version = "0.1.0"
description = "A value-investor trend overlay backtester with staged position sizing and drawdown control."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.1",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
china = ["akshare>=1.14"]
dev = ["pytest>=8.0"]

[project.scripts]
value-trend-backtest = "value_trend_backtester.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
